Added support of multi stage build